# envctl

./: Cargo.toml  LICENSE  README.md
src/: main.rs  update.rs
src/cli/: mod.rs  update.rs
src/env_file/: mod.rs  parser.rs
