[package]
name = "envctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
combine = "4.6.6"
tokio = { version = "1.27.0", features = ["full"] }
