[package]
name = "envctl"
version = "1.1.0"
authors = ["Yuichiro Luke Smith <contact@yu-smith.com>"]
description = "Take full control over your .env environment variables"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yu-ichiro/envctl"
repository = "https://github.com/yu-ichiro/envctl.git"
keywords = ["env", "environment"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
combine = "4.6.6"
tokio = { version = "1.27.0", features = ["full"] }
